music-quiz: step processing refactor